--- a/dbscan/requirements.txt
+++ b/dbscan/requirements.txt
@@ -1,4 +1,4 @@
-import pandas as pd
-from sklearn.cluster import DBSCAN
-import numpy as np
-from sklearn.preprocessing import StandardScaler
+pandas==1.1.3
+matplot==3.3.2
+numpy==1.19.2
+sklearn==0.0
